@@ -27,46 +27,31 @@ public class BannerServiceImp implements IBannerService {
 	@Override
 	public int insert(Banner banner, MultipartFile img) {
 		if(!img.isEmpty()){
-			// 文件上传
-			// 1.获取文件扩展名
-			String exName = img.getOriginalFilename().substring(img.getOriginalFilename().lastIndexOf("."));
-			// 2.给文件取不重复的名称，
-			long longTime = new Date().getTime();//取时间长整数值
-			String fullName = longTime + exName;//贫家全文件名
-			String banner_path = "banner/";// 定义轮播图文件保存路径
-			String fileRoot = dict.findValue("fileRoot");//保存文件的根路径
-			String fullPath = fileRoot + banner_path + fullName;//文件完整路径
-			banner.setPicture_path(fullPath);// 设置文件保存路径
-			String fileUrl = dict.findValue("imgUrl");// 文件展示前缀
-			banner.setPicture_url(fileUrl + banner_path + fullName);// 设置文件展示路径
-			try {
-				FileUtil.createDir(fullPath);
-				img.transferTo(new File(fullPath)); 
-			} catch (Exception e) {
-				e.printStackTrace();
-			}
+			saveFile(banner,img);
 		}
 		banner.setStatus(1);// 让轮播图默认可用
 		banner.setTs(new Date());
 		return dao.insert(banner);
 	}
-
 	@Override
 	public int delete(String ids) {
 		//删除文件磁盘中的文件
 		System.err.println(ids);
 		String[] id = ids.split(",");
 		for (String string : id) {
-			Banner banner = dao.findById(Integer.valueOf(string));//到数据库查询记录
-			String filePath = banner.getPicture_path();//取存储路径
-			File file = new File(filePath);//内存中创建一个文件
-			file.delete();
+			Banner banner = dao.findById(new Integer(string));// 到数据库表中查询出记录
+			deleteFile(banner.getPicture_path());// 调用文件删除方法
 		}
 		//2.删除数据库文件
 		return dao.delete(ids);
 	}
 	@Override
-	public int update(Banner banner) {
+	public int update(Banner banner,MultipartFile img){
+		//创建文件
+		if(!img.isEmpty()){
+			deleteFile(banner.getPicture_path());//删除文件
+			saveFile(banner, img);// 调用文件保存
+		}
 		banner.setStatus(1);// 让轮播图默认可用
 		banner.setTs(new Date());
 		return dao.update(banner);
@@ -102,5 +87,39 @@ public class BannerServiceImp implements IBannerService {
 	@Override
 	public int updateStatus(Banner banner) {
 		return dao.updateStatus(banner);
+	}
+	/**
+	 * 保存（上传）文件
+	 * @param banner
+	 * @param img
+	 */
+	private void saveFile(Banner banner, MultipartFile img){
+		// 文件上传
+		// 1.获取文件扩展名
+		String exName = img.getOriginalFilename().substring(img.getOriginalFilename().lastIndexOf("."));
+		// 2.给文件取不重复的名称，
+		long longTime = new Date().getTime();//取时间长整数值
+		String fullName = longTime + exName;//贫家全文件名
+		String banner_path = "banner/";// 定义轮播图文件保存路径
+		String fileRoot = dict.findValue("fileRoot");//保存文件的根路径
+		String fullPath = fileRoot + banner_path + fullName;//文件完整路径
+		banner.setPicture_path(fullPath);// 设置文件保存路径
+		String fileUrl = dict.findValue("imgUrl");// 文件展示前缀
+		banner.setPicture_url(fileUrl + banner_path + fullName);// 设置文件展示路径
+		try{
+			FileUtil.createDir(fullPath);
+			img.transferTo(new File(fullPath)); 
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+	/**
+	 * 删除文件
+	 * @param banner
+	 * @param img
+	 */
+	private void deleteFile(String filePath) {// 删除文件
+		File file = new File(filePath);// 在内存创建一个文件
+		file.delete();
 	}
 }
